# passgen

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs  prelude.rs  rgen.rs  util.rs
src/ui/: mod.rs
