[package]
name = "passgen"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
gtk = { version = "0.16.2" }
# gtk4 = "0.5.5"
rand = { version = "0.8.5", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
