# cargo-features = ["profile-rustflags"]

[package]
name = "passgen"
version = "0.1.1"
edition = "2021"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "passgen"
path = "src/main.rs"

[dependencies]
# clap = { version = "4.1.4", features = ["derive"] }
gtk = { version = "0.17.0" }
rand = { version = "0.8.5" }
# gtk4 = "0.5.5"
# serde = { version = "1.0.152", features = ["derive"] }
